force-app/main/default/objects/Charge__c/fields/BasisForCharge__c.field-meta.xml
<CustomField>
    <fullName>BasisForCharge__c</fullName>
    <label>Basis For Charge</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>