force-app/main/default/objects/Charge__c/fields/Charge_Number__c.field-meta.xml
<CustomField>
    <fullName>Charge_Number__c</fullName>
    <displayFormat>CH-{000000}</displayFormat>
    <label>Charge Number</label>
    <type>AutoNumber</type>
</CustomField>