force-app/main/default/objects/Charge__c/fields/EEO_Detail__c.field-meta.xml
<CustomField>
    <fullName>EEO_Detail__c</fullName>
    <label>EEO Detail</label>
    <referenceTo>EEO_Detail__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>