force-app/main/default/objects/Charge__c/fields/FiledCharges__c.field-meta.xml
<CustomField>
    <fullName>FiledCharges__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filed Charges</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charges (Filed Charges)</relationshipLabel>
    <relationshipName>Charges1</relationshipName>
    <type>Lookup</type>
</CustomField>